# llvm-dce-lab

./: .gitignore  README.md  package.json  server.js
docs/: side-effects.md
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js  dce-engine.js  ir-parser.js  test-programs.js
passes/: CMakeLists.txt
passes/include/: DeadCodeAnalysis.h  DeadCodeTransform.h
passes/src/: DeadCodeAnalysis.cpp  DeadCodeTransform.cpp  PassPlugin.cpp
tests/: test1_arithmetic.ll  test2_control_flow.ll  test3_mixed.ll
tests/c/: test1_dead_arithmetic.c
tests/cpp/: test2_dead_objects.cpp
tests/java/: DeadCode.java
tests/ll/: README.md  dce_full_benchmark.ll  test_arithmetic.ll  test_atomics.ll  test_bitwise.ll  test_complex.ll  test_control_flow.ll  test_custom_template.ll  test_exceptions.ll  test_function_calls.ll  test_loops.ll  test_memory_ops.ll  test_phi_ssa.ll  test_pointers.ll  test_recursive.ll  test_side_effects.ll  test_type_cast.ll
tests/python/: dead_code.py
